minor fixes fonts etc

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,7 +87,7 @@ h3,
 }
 
 .lt-role {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Cinzel', serif;
     font-size: 1.8rem;
     text-transform: uppercase;
     color: var(--church-gold);
