no cursor on overlay

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -26,6 +26,7 @@ h3,
 /* --- OVERLAY MODE --- */
 .overlay-mode {
     background-color: transparent;
+    cursor: none;
 }
 
 .overlay-mode.greenscreen {
