--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,12 +25,12 @@ h3,
 
 /* --- OVERLAY MODE --- */
 .overlay-mode {
-    background-color: transparent;
+    background-color: transparent !important;
     cursor: none;
 }
 
 .overlay-mode.greenscreen {
-    background-color: var(--greenscreen-color, #00FF00);
+    background-color: var(--greenscreen-color, #00FF00) !important;
 }
 
 .overlay-mode #dashboard {
@@ -205,7 +205,7 @@ h3,
 /* Dashboard Items */
 .preview-box {
     aspect-ratio: 16/9;
-    background: #1e293b;
+    background: #e2e8f0;
     border-radius: 8px;
     position: relative;
     display: flex;
@@ -216,6 +216,11 @@ h3,
     cursor: pointer;
     border: 2px solid transparent;
     transition: all 0.2s;
+}
+
+:is(.dark .preview-box) {
+    background: #1e293b;
+    border: 1px solid #475569;
 }
 
 .preview-box:hover {
