--- a/public/css/designer.css
+++ b/public/css/designer.css
@@ -125,7 +125,26 @@ input[type="number"] {
 }
 
 .crosshair::after {
-    height: 100%;
     width: 1px;
     left: 50%;
+}
+
+/* Grid Overlay */
+.grid-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: 40;
+    display: none;
+    background-size: 50px 50px;
+    background-image:
+        linear-gradient(to right, rgba(0, 255, 255, 0.1) 1px, transparent 1px),
+        linear-gradient(to bottom, rgba(0, 255, 255, 0.1) 1px, transparent 1px);
+}
+
+.grid-overlay.visible {
+    display: block;
 }
